<resources>
    <string name="app_name">android-mvvm-project-base</string>
    <string name="create_project">Create project</string>
    <string name="project">Project</string>
    <string name="see_all_projects">See all projects ></string>
    <string name="animation_lessons">Animation Lessons</string>
    <string name="animation_draw">Animation Draw</string>
    <string name="create_a_project">Create a project</string>
    <string name="project_name">Project name</string>
    <string name="choose_background">Choose background</string>
    <string name="choose_format">Choose format</string>
    <string name="format">Format</string>
    <string name="canvas_size">Canvas size</string>
    <string name="export">Export</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mp4">MP4</string>
    <string name="gif">Gif</string>
    <string name="_1_1">1:1</string>
    <string name="_16_9">16:9</string>
    <string name="_4_3">4:3</string>
    <string name="frame_per_second">Frame per second</string>
    <string name="currently_you_would_need_to_draw_1_frame_to_make_1_second">Currently you would need to draw 1 frame to make 1 second</string>
    <string name="remove_watermark">Remove watermark</string>
    <string name="save_to_device">Save to device</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="all_projects">All projects</string>
    <string name="add_text">Add text</string>
    <string name="edit_picture">Edit picture</string>
    <string name="remove_image_background">Remove image background</string>
    <string name="loading">Loading</string>
    <string name="preview">Preview</string>
</resources>