<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:paddingVertical="@dimen/_10sdp"
    tools:context=".presentation.setup_project.ChooseCanvasSizeFragment">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/bg_item_home_project"
        android:padding="@dimen/_4sdp"
        android:rotation="180"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitleScreen" />

    <TextView
        android:id="@+id/tvTitleScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/canvas_size"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCanvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_50sdp"
        android:background="@color/white"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintTop_toBottomOf="@id/tvTitleScreen" />

    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/ic_rectangle"
        app:layout_constraintBottom_toBottomOf="@+id/ivCanvas"
        app:layout_constraintEnd_toEndOf="@+id/ivCanvas"
        app:layout_constraintStart_toStartOf="@+id/ivCanvas"
        app:layout_constraintTop_toTopOf="@+id/ivCanvas" />

    <LinearLayout
        android:id="@+id/llCanvas11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginVertical="@dimen/_50sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/ivCanvas"
        tools:layout_editor_absoluteX="19dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_1"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.widget.RadioButton
            android:id="@+id/rb11Format"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:buttonTint="@color/radio_button_color"
            android:checked="true"
            android:clickable="false"
            android:foregroundTint="#abc" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCanvas169"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/llCanvas11"
        tools:layout_editor_absoluteX="19dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_16_9"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.widget.RadioButton
            android:id="@+id/rb169Format"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:buttonTint="@color/radio_button_color"
            android:clickable="false"
            android:foregroundTint="#abc" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCanvas43"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/llCanvas169"
        tools:layout_editor_absoluteX="19dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_3"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.widget.RadioButton
            android:id="@+id/rb43Format"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:buttonTint="@color/radio_button_color"
            android:clickable="false"
            android:foregroundTint="#abc" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>