<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:paddingVertical="@dimen/_10sdp"
    tools:context=".presentation.setup_project.SetupProjectFragment">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/bg_item_home_project"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitleScreen" />

    <TextView
        android:id="@+id/tvTitleScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/create_a_project"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/project_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleScreen" />

    <EditText
        android:id="@+id/edtProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:inputType="text"
        android:text="duycuannn"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvTitleProject" />

    <TextView
        android:id="@+id/tvChooseBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/choose_background"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtProjectName" />

    <ImageView
        android:id="@+id/ivBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/bg_item_home_project"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H, 16:9"
        app:layout_constraintTop_toBottomOf="@id/tvChooseBackground" />

    <View
        android:id="@+id/ivBackgroundColor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/bg_item_home_project"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H, 16:9"
        app:layout_constraintTop_toBottomOf="@id/tvChooseBackground" />

    <ImageView
        android:id="@+id/btnCaptureBackgroundImage"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_1sdp"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/btnChooseBackgroundImage"
        app:layout_constraintEnd_toStartOf="@id/btnChooseBackgroundImage" />

    <ImageView
        android:id="@+id/btnChooseBackgroundImage"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_1sdp"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_image"
        app:layout_constraintBottom_toBottomOf="@id/btnChooseBackgroundColor"
        app:layout_constraintEnd_toStartOf="@id/btnChooseBackgroundColor" />

    <ImageView
        android:id="@+id/btnChooseBackgroundColor"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_paint_bucket"
        app:layout_constraintBottom_toBottomOf="@id/ivBackgroundImage"
        app:layout_constraintEnd_toEndOf="@id/ivBackgroundImage" />

    <TextView
        android:id="@+id/tvChooseFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/choose_format"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBackgroundImage" />

    <LinearLayout
        android:id="@+id/llOutputFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseFormat"
        tools:layout_editor_absoluteX="19dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvOutputFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            tools:text="MP4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCanvasSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/llOutputFormat"
        tools:layout_editor_absoluteX="19dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canvas_size"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvCanvasSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            tools:text="1:1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/llCanvasSize"
        tools:layout_editor_absoluteX="19dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Frame per second"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvFps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            tools:text="12 FPS" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCreateProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="#abc"
        android:enabled="false"
        android:text="@string/create_a_project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>